--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,31 +1,77 @@
+* {margin: 0; padding: 0;}
+
 body {
-        font-family: "Scope One", serif;
-        font-size: 1em;
-        line-height: 120%;
-        text-align: left;
-        text-transform: none;
-      }    
+    font-family: "Scope One", serif;
+    font-size: 1em;
+    line-height: 120%;
+    text-align: left;
+    text-transform: none;
+}    
+
+#wrapper { 
+    width: 90%;
+    margin: auto;
+    position: relative;
+}
+
+.container {
+    background-color: pink;
+}
+
+header {
+    background-color:pink;
+    height: 30%;
+    position: relative;
+    width: 100%;
+    margin: auto;
+    padding: auto;
+}
+
+footer {
+    width: 90%;
+    margin: 2%;
+    padding: auto;
+}
+
+nav {
+    display: inline;
+    width: 90%;
+    margin: auto;
+    position: relative;
+    z-index: 20%;
+    padding: auto;
+}
 
 h1{
+    margin-top: 5%;
     color:rgb(211, 36, 65);
 }
 
 h2{
+    margin-top: 2%;
     text-decoration: overline;
 }
 
 ul{
+    margin-top: 2%;
     list-style-type: none;
+}
+
+p{
+    overflow: auto;
+    position: relative;
 }
 
 img{
     width: 30%;
-    height: auto;
+    height: 100%;
+    position: relative;
 }
 
 article{
+    margin-top: 2%;
     background-image: url('Images/Sailboats.jpg');
-        background-repeat: repeat-x;
+    background-repeat: repeat-x;
 }
 
 a:link {
@@ -39,6 +85,59 @@ color: rgba(7, 88, 54, 0.613);
 a:hover {
     color: pink;
 }
+
+.columns {
+    float:left;
+} 
+
+.col-1 {
+    width: 8.33%;
+} 
+
+.col-2 {
+    width: 16.66%;
+}
+
+.col-3 {
+    width: 25%;
+} 
+
+.col-4 {
+    width: 33.33%;
+} 
+
+.col-5 {
+    width: 41.66%;
+} 
+
+.col-6 {
+    width: 50%;
+} 
+
+.col-7 {
+    width: 58.33%;
+} 
+
+.col-8 {
+    width: 66.66%;
+} 
+
+.col-9 {
+    width: 75%;
+}
+
+.col-10 {
+    width: 83.33%;
+} 
+
+.col-11 {
+    width: 91.66%;
+} 
+
+.col-12 {
+    width: 100%;
+}
+
 
 html{
     background-color: rgb(241, 235, 226);
