--- a/stylesheet.css
+++ b/stylesheet.css
@@ -6,7 +6,28 @@ body {
     line-height: 120%;
     text-align: left;
     text-transform: none;
-}    
+}  
+@media only screen and (max-width: 480px) {
+      h1 {
+        font-size: 18px;
+      }
+    
+      p {
+        font-size: 12px;
+      }
+    
+      .container {
+        padding: 10px;
+      }
+    }
+
+    #wrapper { width: 80%; margin: auto; }
+    .column { width: 33.33%; float: left; margin: 10%;
+    }
+    @media only screen and (max-width: 480px) {
+    .column { width: 100%; float: left;
+    margin: 0%; }
+    }
 
 #wrapper { 
     width: 90%;
