--- a/css/exercise5.css
+++ b/css/exercise5.css
@@ -48,3 +48,30 @@ a:link {
  footer{
     color: #5b5121;
  }
+
+ div {
+   animation-duration: 3s;
+   animation-name: animation;
+ }
+
+@keyframes animation {
+   0% {
+      transform: scale(0.1);
+      opacity: 0;
+      }
+   60% {
+        transform: scale(1.2);
+        opacity: 1;
+      }
+   100% {
+        transform: scale(1);
+      }
+    }
+
+    div {
+      transition: transform 1s;
+    }
+    
+    div:hover {
+      transform: scale(2);
+    }
