--- a/css/exercise5.css
+++ b/css/exercise5.css
@@ -1,12 +1,10 @@
-// <weight>: Use a value from 400 to 700
-// <uniquifier>: Use a unique and descriptive class name
-
-.lora-<uniquifier> {
+.lora-12435 {
   font-family: "Lora", serif;
   font-optical-sizing: auto;
-  font-weight: <weight>;
+  font-weight: 400;
   font-style: normal;
 }
+
 html {
     background-color: #f8d5d3;
 }
@@ -19,11 +17,9 @@ a:link {
     color: #5b5121;
  }
  
- 
  a:visited {
  color: #bfa732;
  }
- 
  
  a:hover {
     color:#ed6328;
