--- a/Files/Project 2/css/Project2stylesheet.css
+++ b/Files/Project 2/css/Project2stylesheet.css
@@ -117,15 +117,7 @@ header {
    width: 100%;
    margin: auto;
    padding: auto;
-   background-color: #fffcf8;
-}
-
-a:link {
-   color: black;
-}
-   
-a:visited {
-   color: black;
+   background-color: #FFFCF8;
 }
    
 a:hover {
@@ -221,7 +213,6 @@ h1{
 .section-heading {
    font-size: 32px;
    margin-bottom: 40px;
-   font-family: "Instrument Serif", serif;
    color: black;
    letter-spacing: 1px;
 }
@@ -285,7 +276,6 @@ h1{
    font-size: 32px;
    color: #99a251;
    margin-bottom: 20px;
-   font-family: "Instrument Serif", serif;
  }
 
  .music-text p {
@@ -403,12 +393,6 @@ h1{
    line-height: 1.6;
    margin-bottom: 16px;
    color: black;
- }
-
- .gallery-section {
-   background-color: #CBD7E3;
-   padding: 60px 20px;
-   text-align: center;
  }
 
  .gallery-heading {
@@ -705,25 +689,17 @@ h1{
       display: flex;
       flex-direction: column;
       align-items: center;
-      gap: 16px;
     }
     
-    .footer-nav {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 12px;
-      font-size: 16px;
+    .footer-nav.left {
+      order: 1;
+    }
+    
+    .footer-nav.right {
+      order: 2; /* move this ABOVE the logo */
     }
     
     .footer-title {
-      font-size: 28px;
-      font-weight: bold;
+      order: 3;
     }
-    
-    .footer-bottom {
-      font-size: 14px;
-      margin-top: 20px;
-    }
-
  }
