--- a/Files/Project 2/css/Project2stylesheet.css
+++ b/Files/Project 2/css/Project2stylesheet.css
@@ -2,7 +2,7 @@
 
 html {
    scroll-behavior: smooth;
- }
+}
 
 body {
    font-family: "Instrument Serif", serif;
@@ -20,7 +20,7 @@ h1{
    color: black
 }
 
- .instrument-serif-regular {
+.instrument-serif-regular {
    font-family: "Instrument Serif", serif;
    font-weight: 400;
    font-style: normal;
@@ -39,9 +39,9 @@ h1{
    font-style: normal;
  }
 
- #menu-toggle {
+#menu-toggle {
    display: none;
- }
+}
 
  .nav-bar {
    display: flex;
@@ -205,16 +205,18 @@ h1{
 }
 
 .gallery-section {
-   background-color: #cdd7e1;
+   background-color: #CBD7E3;
    text-align: center;
    padding-top: 10;
+   top: 20px;
 }
 
 .section-heading {
    font-size: 32px;
    margin-bottom: 40px;
    color: black;
-   letter-spacing: 1px;
+   letter-spacing: 1px; 
+   padding-top: 5%;
 }
 
 .gallery-item img {
@@ -286,19 +288,19 @@ h1{
    font-family: "Ojuju", sans-serif;
  }
 
- .abba-section {
+.abba-section {
    background-color: #CBD7E3;
    padding: 60px 20px;
- }
+}
 
- .album-grid {
+.album-grid {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    gap: 40px;
    max-width: 1000px;
    margin: 0 auto;
    padding: 40px 20px;
- }
+}
 
  .album {
    position: relative;
@@ -318,16 +320,16 @@ h1{
    border: 1px solid black;
  }
 
- .vinyl {
+.vinyl {
    position: absolute;
    top: 5%;
    right: -30px;
    width: 220px;
    height: 220px;
    z-index: 2;
- }
+}
 
- .song-title {
+.song-title {
    background-color: #FFFCF8;
    margin-top: 24px;
    padding: 6px 12px;
@@ -338,7 +340,7 @@ h1{
    color: black;
    text-align: center;
    border: 1px solid black;
- } 
+} 
 
  .vinyl:hover {
    animation: spin 1s linear infinite;
@@ -401,6 +403,7 @@ h1{
    font-family: "Instrument Serif", serif;
    color: black;
    letter-spacing: 1px;
+   padding-top: 2%;
  }
 
  .gallery-grid {
@@ -409,6 +412,7 @@ h1{
    gap: 20px;
    max-width: 1000px;
    margin: 0 auto;
+   padding-bottom: 2%;
  }
 
  .gallery-grid img {
@@ -517,28 +521,32 @@ h1{
 }
 
 @media screen and (max-width: 768px) {
-   .nav-bar {
-     flex-direction: column;
-     align-items: center;
-     gap: 12px;
-   }
+
+  .nav-bar {
+    flex-direction: column;
+    align-items: center;
+    gap: 12px;
+  }
+
+  .nav-left,
+  .nav-right {
+    display: flex;
+    gap: 1rem;
+  }
  
-   .nav-links {
-     flex-direction: column;
-     gap: 4px;
-     display: none;
-     text-align: center;
-   }
- 
-   #menu-toggle:checked ~ .nav-links {
-     display: flex;
+  .nav-links {
+    flex-direction: column;
+    gap: 3px;
+    display: none;
+    text-align: center;
    }
  
    .logo {
-     position: static;
-     transform: none;
-     margin: 8px 0;
-     text-align: center;
+    position: static;
+    transform: none;
+    margin-top: 10px;
+    margin-bottom: -20px;
+    text-align: center;
    }
  
    .menu-icon {
@@ -696,10 +704,24 @@ h1{
     }
     
     .footer-nav.right {
-      order: 2; /* move this ABOVE the logo */
+      order: 2;
     }
     
     .footer-title {
       order: 3;
     }
+ }
+
+ @media (min-width: 1024px) {
+
+  .overlay-image {
+    padding-top: 40px;
+    padding-bottom: 40px;
+  }
+
+  .overlay-image-two {
+    padding-top: 40px;
+    padding-bottom: 40px;
+  }
+
  }
