--- a/Files/Project 2/css/Project2stylesheet.css
+++ b/Files/Project 2/css/Project2stylesheet.css
@@ -715,13 +715,18 @@ h1{
  @media (min-width: 1024px) {
 
   .overlay-image {
-    padding-top: 40px;
-    padding-bottom: 40px;
+    padding-top: 80px;
+    padding-bottom: 80px;
   }
 
   .overlay-image-two {
-    padding-top: 40px;
-    padding-bottom: 40px;
+    padding-top: 80px;
+    padding-bottom: 80px;
+
+  .gallery-grid {
+     padding-top: 80px;
+     padding-bottom: 80px;
   }
+}
 
  }
