--- a/Files/Project 2/css/Project2stylesheet.css
+++ b/Files/Project 2/css/Project2stylesheet.css
@@ -715,13 +715,13 @@ h1{
  @media (min-width: 1024px) {
 
   .overlay-image {
-    padding-top: 80px;
-    padding-bottom: 80px;
+    margin-top: 80px;
+    margin-bottom: 80px;
   }
 
   .overlay-image-two {
-    padding-top: 80px;
-    padding-bottom: 80px;
+    margin-top: 80px;
+    margin-bottom: 80px;
   }
 
   .gallery-grid {
@@ -731,6 +731,6 @@ h1{
 
   .album-grid {
     padding-top: 80px;
-    padding-bottom: 80px;
+    padding-bottom: 60px;
   }
 }
