--- a/Files/Project 2/css/Project2stylesheet.css
+++ b/Files/Project 2/css/Project2stylesheet.css
@@ -714,14 +714,9 @@ h1{
 
  @media (min-width: 1024px) {
 
-  .overlay-image img {
-    margin-top: 80px;
-    margin-bottom: 80px;
-  }
-
-  .overlay-image-two img {
-    margin-top: 80px;
-    margin-bottom: 80px;
+  .image-section {
+    margin-top: 60px;
+    margin-bottom: 60px;
   }
 
   .gallery-grid {
