--- a/Files/Project 2/css/Project2stylesheet.css
+++ b/Files/Project 2/css/Project2stylesheet.css
@@ -717,6 +717,7 @@ h1{
   .image-section {
     padding-top: 80px;
     padding-bottom: 80px;
+    background-color: transparent;
   }
 
   .image-section-two{
