--- a/Files/Project 2/css/Project2stylesheet.css
+++ b/Files/Project 2/css/Project2stylesheet.css
@@ -717,7 +717,8 @@ h1{
   .image-section {
     padding-top: 80px;
     padding-bottom: 80px;
-    background-color: transparent;
+    background-image: url('../Images/oceanbackground.jpg');
+    background-size: cover;
   }
 
   .image-section-two{
