--- a/Files/Project 2/css/Project2stylesheet.css
+++ b/Files/Project 2/css/Project2stylesheet.css
@@ -715,13 +715,18 @@ h1{
  @media (min-width: 1024px) {
 
   .image-section {
-    padding-top: 80px;
-    padding-bottom: 80px;
     background-image: url('../Images/oceanbackground.jpg');
     background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    width: 100%;
+    min-height: 100vh;
+    padding: 10% 5%;
+    position: relative;
+    overflow: hidden;
   }
 
-  .image-section-two{
+  .image-section-two {
     padding-top: 80px;
     padding-bottom: 80px;
   }
