--- a/Files/Project 2/css/Project2stylesheet.css
+++ b/Files/Project 2/css/Project2stylesheet.css
@@ -721,7 +721,8 @@ h1{
     background-repeat: no-repeat;
     width: 100%;
     min-height: 100vh;
-    padding: 40% 40%;
+    padding-top: 80px;
+    padding-bottom: 80px;
     position: relative;
     overflow: hidden;
   }
