--- a/Files/Project 2/css/Project2stylesheet.css
+++ b/Files/Project 2/css/Project2stylesheet.css
@@ -723,4 +723,12 @@ h1{
      padding-top: 80px;
      padding-bottom: 80px;
   }
+
+  .album-cover {
+    margin-top: 100px;
+  }
+ 
+ .vinyl {
+    margin-top: 100px;
+ }
 }
