--- a/Files/Project 2/css/Project2stylesheet.css
+++ b/Files/Project 2/css/Project2stylesheet.css
@@ -738,11 +738,14 @@ h1{
     padding-top: 80px;
     padding-bottom: 80px;
   }
-
 }
 
 @media (min-width: 768px) and (max-width: 1023px) {
-  .overlay-image{
-    width: 70%
+  .overlay-image {
+    width: 60%
+  }
+
+  .overlay-image-two {
+    width: 60%;
   }
 }
